added video-fashion section

--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "jquery": "^3.6.0",
     "sass": "^1.49.10",
     "slick-carousel": "^1.8.1"
+  },
+  "dependencies": {
+    "@fancyapps/fancybox": "^3.5.7"
   }
 }
