--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "slick-carousel": "^1.8.1"
   },
   "dependencies": {
-    "@fancyapps/fancybox": "^3.5.7"
+    "@fancyapps/fancybox": "^3.5.7",
+    "ion-rangeslider": "^2.3.1"
   }
 }
